samples/_failures_safe/1761376053_7a257e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f786872b.c: In function ‘main’:
./samples/SAFE/__tmp_f786872b.c:159:17: error: expected declaration or statement at end of input
  159 |                 }
      |                 ^
./samples/SAFE/__tmp_f786872b.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f786872b.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f786872b.c:159:17: error: expected declaration or statement at end of input
